# react-native-cpp

./: .gitignore  app.json  index.js  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rncpp/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/rncpp/jni/: DemoModule.java  DjinniModulesPackage.java
android/app/src/main/res/values/: strings.xml
cpp/: DemoModuleImpl.cpp  DemoModuleImpl.hpp
ios/: RCDemoModule.mm
ios/rncpp/: AppDelegate.m  Info.plist
ios/rncpp.xcodeproj/: project.pbxproj
ios/rncpp.xcodeproj/project.xcworkspace/xcuserdata/andreysaleba.xcuserdatad/: UserInterfaceState.xcuserstate
ios/rncpp.xcodeproj/xcshareddata/xcschemes/: rncpp-tvOS.xcscheme  rncpp.xcscheme
ios/rncpp.xcodeproj/xcuserdata/andreysaleba.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/rncpp/Base.lproj/: LaunchScreen.xib
ios/rncppTests/: rncppTests.m
